--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,25 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-10 Fri 10:47]
+#+CAPTION: Clock summary at [2017-03-10 Fri 11:27]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *25:46* |       |      | 100.0 |
+| *Total time*                                                                | *26:11* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 25:46   |       |      | 100.0 |
-| Active                                                                      |         | 25:46 |      | 100.0 |
+| Stories                                                                     | 26:11   |       |      | 100.0 |
+| Active                                                                      |         | 26:11 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 1:01 |   3.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   1.7 |
-| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |  11.5 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  19.7 |
-| COMPLETED Split include and source directories                              |         |       | 5:22 |  20.8 |
+| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |  11.3 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  19.4 |
+| COMPLETED Split include and source directories                              |         |       | 5:22 |  20.5 |
 | STARTED Check for incompatibility between input language and enabled kernels |         |       | 0:11 |   0.7 |
-| STARTED Add a LAM test model just to validate existing functionality        |         |       | 1:48 |   7.0 |
+| STARTED Add a LAM test model just to validate existing functionality        |         |       | 1:48 |   6.9 |
 | STARTED Build on tags for Windows                                           |         |       | 0:15 |   1.0 |
 | STARTED Add a "flat directory" mode                                         |         |       | 0:08 |   0.5 |
-| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 1:11 |   4.6 |
-| STARTED Add C++-03 mode                                                     |         |       | 7:22 |  28.6 |
+| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 1:11 |   4.5 |
+| STARTED Add C++-03 mode                                                     |         |       | 7:47 |  29.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -377,6 +377,7 @@ paths. We need to catalogue them all and name them properly.
   the include path.
 
 *** STARTED Add C++-03 mode                                            :epic:
+    CLOCK: [2017-03-10 Fri 11:02]--[2017-03-10 Fri 11:27] =>  0:25
     CLOCK: [2017-03-10 Fri 10:12]--[2017-03-10 Fri 10:47] =>  0:35
     CLOCK: [2017-03-09 Thu 15:33]--[2017-03-09 Thu 17:15] =>  1:42
     CLOCK: [2017-03-09 Thu 15:08]--[2017-03-09 Thu 15:32] =>  0:24
@@ -412,6 +413,16 @@ Tasks:
   ctor (e.g. force it).
 - enums
 - need to disable ODB c++ 11 as well.
+
+*** Start signing all tags                                            :story:
+
+We should really be signing all git tags.
+
+Links:
+
+- [[https://git-scm.com/book/tr/v2/Git-Tools-Signing-Your-Work][Git Tools - Signing Your Work]]
+- [[http://stackoverflow.com/questions/10161198/is-there-a-way-to-autosign-commits-in-git-with-a-gpg-key][Is there a way to “autosign” commits in Git with a GPG key?]]
+- [[http://emacs.stackexchange.com/questions/18514/how-to-automatically-sign-commits-with-magit][How to automatically sign commits with magit?]]
 
 *** Not setting output language results in weird errors               :story:
 
