--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-12 Sun 18:19]
+#+CAPTION: Clock summary at [2017-03-12 Sun 21:36]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *30:46* |       |      | 100.0 |
+| *Total time*                                                                | *32:09* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 30:46   |       |      | 100.0 |
-| Active                                                                      |         | 30:46 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:01 |   3.3 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   1.4 |
-| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |   9.6 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  16.5 |
-| COMPLETED Split include and source directories                              |         |       | 5:22 |  17.4 |
-| COMPLETED Add C++-03 mode                                                   |         |       | 8:19 |  27.0 |
+| Stories                                                                     | 32:09   |       |      | 100.0 |
+| Active                                                                      |         | 32:09 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:01 |   3.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   1.3 |
+| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |   9.2 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  15.8 |
+| COMPLETED Split include and source directories                              |         |       | 5:22 |  16.7 |
+| COMPLETED Add C++-03 mode                                                   |         |       | 8:19 |  25.9 |
 | STARTED Check for incompatibility between input language and enabled kernels |         |       | 0:11 |   0.6 |
-| STARTED Add a LAM test model just to validate existing functionality        |         |       | 2:38 |   8.6 |
+| STARTED Add a LAM test model just to validate existing functionality        |         |       | 2:38 |   8.2 |
 | STARTED Build on tags for Windows                                           |         |       | 0:15 |   0.8 |
 | STARTED Add a "flat directory" mode                                         |         |       | 0:08 |   0.4 |
-| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 1:11 |   3.8 |
-| STARTED Implement the database model using Northwind                        |         |       | 3:13 |  10.5 |
+| STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 1:11 |   3.7 |
+| STARTED Implement the database model using Northwind                        |         |       | 4:36 |  14.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -378,6 +378,7 @@ includes. There are some differences though:
   Visual Studio element we have visibility of all enabled versions.
 
 *** STARTED Implement the database model using Northwind              :story:
+    CLOCK: [2017-03-12 Sun 20:13]--[2017-03-12 Sun 21:36] =>  1:23
     CLOCK: [2017-03-12 Sun 17:21]--[2017-03-12 Sun 18:19] =>  0:58
     CLOCK: [2017-03-12 Sun 15:05]--[2017-03-12 Sun 17:20] =>  2:15
 
